<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
        android:id="@+id/mergetab2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip"
        android:weightSum="1">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/desc_pos_etiqueta"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/derecha"
                android:id="@+id/radioButtonDerecha"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:checked="true"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc_derecha"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/izquierda"
                android:id="@+id/radioButtonIzquierda"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc_izquierda"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />
            </RadioGroup>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:id="@+id/buttonConfirmarPosicion"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05" />

    </LinearLayout>

</merge>