<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/info_buscar_producto"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/checkBoxMultiple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:focusable="true"
                        android:nextFocusUp="@+id/editText1"
                        android:text="@string/multiple_product" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="5"
                        android:nextFocusUp="@+id/editText2" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="5"
                        android:nextFocusUp="@+id/editText3"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="5"
                        android:nextFocusUp="@+id/button"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/buttonBuscar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:text="@string/buscar_product" />

                    <Button
                        android:id="@+id/buttonConfirmarProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:text="@string/confirmar" />

                    <WebView
                        android:id="@+id/webViewPre"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="4.61" />

                </LinearLayout>

            </ScrollView>

    </LinearLayout>

</merge>